k8s/production/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-api-prod
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: task-api
    env: production
